[gd_scene load_steps=8 format=3 uid="uid://chh73xal5p72g"]

[ext_resource type="Texture2D" uid="uid://cj67c1yjc6ruk" path="res://terreno/assets/interior/wooden_door_b.png" id="1_2aknm"]
[ext_resource type="Script" path="res://components/scripts/door_componet.gd" id="1_alyas"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85l8w"]
size = Vector2(33, 11)

[sub_resource type="Animation" id="Animation_y6ime"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m126f"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_7bfry"]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8l3k"]
_data = {
"RESET": SubResource("Animation_y6ime"),
"close": SubResource("Animation_m126f"),
"open": SubResource("Animation_7bfry")
}

[node name="DoorComponet" type="Area2D"]
z_index = 1
script = ExtResource("1_alyas")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_2aknm")
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_85l8w")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e8l3k")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
